fixed GUI in UNIX

--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/plot/PlotFrameController.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/plot/PlotFrameController.form
@@ -48,11 +48,11 @@
                           </Group>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
-                                  <Component id="SetXButton" min="-2" max="-2" attributes="0"/>
+                                  <Component id="SetXButton" min="-2" pref="54" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="SetYButton" min="-2" max="-2" attributes="0"/>
+                                  <Component id="SetYButton" min="-2" pref="54" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="SetZButton" min="-2" max="-2" attributes="0"/>
+                                  <Component id="SetZButton" min="-2" pref="54" max="-2" attributes="0"/>
                               </Group>
                               <Group type="102" alignment="1" attributes="0">
                                   <Component id="AxisSetupLabel" min="-2" max="-2" attributes="0"/>
@@ -60,10 +60,10 @@
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="XLabel" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="YLabel" alignment="0" min="-2" pref="10" max="-2" attributes="0"/>
-                                  <Component id="ZLabel" alignment="0" min="-2" pref="10" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="XLabel" max="32767" attributes="0"/>
+                                  <Component id="YLabel" alignment="0" pref="20" max="32767" attributes="0"/>
+                                  <Component id="ZLabel" alignment="0" max="32767" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -80,8 +80,8 @@
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="MeasureLabel" min="-2" pref="45" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="MeasureLabel" min="-2" pref="75" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                       <Component id="MeasureComboBox" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -112,15 +112,15 @@
                       <Component id="AxisSetupLabel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="198" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="103" groupAlignment="3" attributes="0">
                               <Component id="SetYButton" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="SetZButton" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="SetXButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="SetXButton" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="XLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="XValueLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -135,7 +135,7 @@
                           <Component id="ZLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="ZValueLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="36" max="32767" attributes="0"/>
+                      <EmptySpace pref="30" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="MeasureComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="MeasureLabel" alignment="3" min="-2" max="-2" attributes="0"/>
