--- a/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
+++ b/TimeNetExperimentGenerator/src/timenetexperimentgenerator/optimization/OptimizerPreferences.form
@@ -7,7 +7,6 @@
   </NonVisualComponents>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -33,8 +32,8 @@
                               <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
                               <Component id="jLabelStartvalueForParameters" pref="186" max="32767" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jComboBoxTypeOfStartValue" min="-2" pref="167" max="-2" attributes="1"/>
-                              <EmptySpace min="-2" pref="121" max="-2" attributes="0"/>
+                              <Component id="jComboBoxTypeOfStartValue" min="-2" pref="217" max="-2" attributes="1"/>
+                              <EmptySpace min="-2" pref="71" max="-2" attributes="0"/>
                           </Group>
                           <Group type="103" alignment="1" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
@@ -49,7 +48,7 @@
                       </Group>
                       <EmptySpace min="-2" pref="292" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jTabbedPane1" alignment="0" max="32767" attributes="0"/>
+                  <Component id="jTabbedPane1" alignment="0" pref="848" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
@@ -147,30 +146,25 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="jLabelTypeOfNeighborhood" min="-2" pref="276" max="-2" attributes="0"/>
+                              <Component id="jLabelTypeOfNeighborhood" min="-2" pref="172" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Component id="jComboBoxTypeOfNeighborhood" pref="140" max="32767" attributes="1"/>
-                              <EmptySpace pref="386" max="32767" attributes="0"/>
+                              <Component id="jComboBoxTypeOfNeighborhood" min="-2" pref="241" max="-2" attributes="1"/>
                           </Group>
+                          <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" alignment="0" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jLabelWrongSolutionsUntilBreak" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jLabelWrongSolutionsPerDirectionUntilBreak" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="jSpinnerWrongSolutionsPerDirectionUntilBreak" max="32767" attributes="1"/>
-                                          <Component id="jSpinnerWrongSolutionsUntilBreak" alignment="0" min="-2" pref="76" max="-2" attributes="1"/>
-                                          <Component id="jSpinnerSizeOfNeighborhoodInPercent" alignment="1" min="-2" pref="62" max="-2" attributes="0"/>
-                                      </Group>
-                                  </Group>
+                                  <Component id="jLabelWrongSolutionsUntilBreak" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelWrongSolutionsPerDirectionUntilBreak" alignment="0" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="392" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                  <Component id="jSpinnerWrongSolutionsPerDirectionUntilBreak" max="32767" attributes="1"/>
+                                  <Component id="jSpinnerWrongSolutionsUntilBreak" alignment="0" min="-2" pref="76" max="-2" attributes="1"/>
+                                  <Component id="jSpinnerSizeOfNeighborhoodInPercent" alignment="1" min="-2" pref="62" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
+                      <EmptySpace pref="389" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -288,7 +282,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="260" y="60" width="170" height="-1"/>
+                  <AbsoluteConstraints x="240" y="60" width="190" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -438,7 +432,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="260" y="20" width="170" height="-1"/>
+                  <AbsoluteConstraints x="200" y="20" width="230" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -475,7 +469,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="260" y="60" width="170" height="-1"/>
+                  <AbsoluteConstraints x="230" y="60" width="200" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -537,7 +531,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="260" y="100" width="170" height="-1"/>
+                  <AbsoluteConstraints x="230" y="100" width="200" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -711,7 +705,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="260" y="70" width="150" height="-1"/>
+                  <AbsoluteConstraints x="260" y="70" width="170" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
